# motrainer

./: 404.html  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  NOTICE  README.md  README.rst  environment.yml  index.html  mkdocs.yml  objects.inv  project_setup.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  zenodo.json
.github/workflows/: build.yml  pypi.yml
CHANGELOG/: CHANGELOG.md  index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api_reference/: api_reference.md  index.html
docs/: CHANGELOG.md  CONTRIBUTING.md  Makefile  conf.py  index.md  index.rst  make.bat  setup.md  usage.md  usage_daskml.md  usage_dnn.md  usage_split.md
docs/notebooks/: example_daskml.ipynb  example_dnn.ipynb  example_read_from_multiple_df.ipynb
docs/notebooks/example_data/: example_data.pickle
docs/notebooks/example_data/shp/: france.dbf  france.shp  france.shx
example/: 1_example_one_pickle_file_with_nested_fields.ipynb  2_example_multi_pickle_files_with_nested_fields.ipynb  3_example_DNN_training.ipynb  IEEEplots.py  demo_jackknife.py  demo_jackknife_loss_weight.py  demo_plot.ipynb  demo_plot.py  demo_train.py  main_GPIs.py
example/demo_slurm/: jackknife_train_one.py  readme.md  submit.sh  train_multiple_gpi.slurm
example/dnn_examples/: demo_jackknife.py
example/dnn_examples/demo_slurm/: jackknife_train_one.py  train_multiple_gpi.slurm
example/dssat_s1/: dask_ml.ipynb  split.ipynb
example/example_data/: testdata_plot_mean_sig_slop_curv.pickle  testdata_plot_timeseries_toy.pickle
example/modelstore_example/: example1_modelstore.ipynb  example2_modelstore.ipynb
example/slurm_examples/: jackknife_train_one.py  readme.md
exploration/: Dask_Exploration.ipynb  generalization_workflow.ipynb  split.ipynb
exploration/modelstore_example/: example1_modelstore.ipynb
legacy/: demo_plot.ipynb
ml_lsmodel_ascat/: __init__.py  __version__.py  dnn.py  gpi_jackknife.py  jackknife.py  model.py  plot.py  util.py  walkforward.py
motrainer/: __init__.py  dnn.py  jackknife.py  model.py  motrainer.py  spliter.py  splitter.py  util.py
notebooks/: example1_data.nc
notebooks/example1_data.zarr/BIOMA1/: 0.0  1.0
notebooks/example1_data.zarr/BIOMA2/: 0.0  1.0
notebooks/example1_data.zarr/TG1/: 0.0  1.0
notebooks/example1_data.zarr/TG2/: 0.0  1.0
notebooks/example1_data.zarr/TG3/: 0.0  1.0
notebooks/example1_data.zarr/WG1/: 0.0  1.0
notebooks/example1_data.zarr/WG2/: 0.0  1.0
notebooks/example1_data.zarr/WG3/: 0.0  1.0
notebooks/example1_data.zarr/curv/: 0.0  1.0
notebooks/example1_data.zarr/latitude/: 0
notebooks/example1_data.zarr/longitude/: 0
notebooks/example1_data.zarr/sig/: 0.0  1.0
notebooks/example1_data.zarr/slop/: 0.0  1.0
notebooks/example1_data.zarr/time/: 0
notebooks/example_daskml/: example_daskml.ipynb  index.html
notebooks/example_dnn/: example_dnn.ipynb  index.html
notebooks/example_read_from_multiple_df/: example_read_from_multiple_df.ipynb  index.html
notebooks/example_read_from_one_df/: example_read_from_one_df.ipynb  index.html
paper/: paper.bib  paper.md
search/: search_index.json
setup/: index.html
tests/: test_dnn.py  test_jackkife.py  test_lint.py  test_ml_lsmodel_ascat.py  test_motrainer.py  test_spliter.py  test_splitter.py  test_util.py
usage_daskml/: index.html
usage_dnn/: index.html  usage_dnn.md
usage_split/: index.html  usage_split.md
(+52 files in other folders)
